@@ -116,6 +116,7 @@
 * GlobalCollect: Add support for encryptedPaymentData [almalee24] #5015
 * Rapyd: Adding 500 errors handling [Heavyblade] #5029
 * SumUp: Add 3DS fields [sinourain] #5030
+* Quickbooks: Update scrubbing logic [almalee24] #5033
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
